--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
-    "rmc-feedback": "^2.0.0"
+    "rmc-feedback": "^2.0.0",
+    "rmc-list-view": "^0.11.5"
   }
 }
